--- a/app/src/main/res/drawable/gradient_album_placeholder.xml
+++ b/app/src/main/res/drawable/gradient_album_placeholder.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#ff6b6b"
-        android:centerColor="#4ecdc4"
-        android:endColor="#45b7d1"
-        android:angle="45" />
+        android:angle="45"
+        android:startColor="#E1BEE7"
+        android:centerColor="#CE93D8"
+        android:endColor="#BA68C8"
+        android:type="linear" />
+    <corners android:radius="8dp" />
 </shape>
